--- a/merchandise.css
+++ b/merchandise.css
@@ -91,14 +91,14 @@ h1, h2 {
 .sale-ribbon {
     position: absolute;
     top: 10px; 
-    left: -30px; 
+    left: 10px; 
     background-color: #ff0000;
     color: white;
-    padding: 5px 20px; 
+    padding: 5px 10px; 
     font-size: 1rem; 
     font-weight: bold;
-    transform: rotate(-45deg); 
     z-index: 1;
+    border-radius: 5px;
 }
 
 footer {
